--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^7.5.1",
+    "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.3",
+    "luxon": "^3.5.0",
+    "node-cron": "^3.0.3",
     "mysql2": "^3.16.1"
   },
   "devDependencies": {
